<resources>
    <string name="app_name">AramsTravel</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="placeholder_title">Placeholder title</string>
    <string name="placeholder_date">Placeholder Date</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="price_eur">Price (EUR)</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="rating">Rating</string>
    <string name="save_trip">Save Trip</string>
    <string name="add_trip_title">Add a new Trip</string>
    <string name="generic_exception_text">Something wrong happened!</string>
    <string name="error_required">This input is required</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t have an account? Register right now!</string>
    <string name="sign_in_register">Already have an account? Sign in!</string>
    <string name="create_account">Create account</string>
    <string name="welcome_message">Welcome to AramsTravel!</string>
    <string name="register_welcome_message">Enter your information!</string>
    <string name="name">Name</string>
    <string name="password_verification">Enter your password again</string>
    <string name="error_wrong_credentials">Wrong email or password! Try again!</string>
    <string name="error_email_pattern">Please enter a valid email address!</string>
    <string name="error_password_verification">The password fields must be the same.</string>
    <string name="error_unfilled">Please fill all the fields!</string>
    <string name="email_already_exist">An account associated with this email address already exists.</string>
    <string name="error_form_generic">Make sure that you\'ve completed the form without errors!</string>
    <string name="logout">Logout</string>
    <string name="edit_trip">Edit a Trip</string>
    <string name="favorites_added">Added to favorites!</string>
    <string name="favorites_removed">Removed from favorites!</string>
    <string name="what_is_this_exactly">About this product</string>
    <string name="app_description">This application has the role of keeping information about your travels, to ensure that no trip will be forgotten. You can: \n\n- add information about the trip(eg. price, destination, type)\n- rate every trip to see the most beautiful destinations and recommend them to your friends\n- mark as favorite the trips you\'ve totally loved!</string>
    <string name="app_description_footer">This app was made as a diploma project application for Google Digital Garage Android Fundamentals.</string>
    <string name="contact_description">For any questions, do not hesitate to contact me!\nYou can send me an email for questions or a message on Instagram, or you can access my Linkedin account to see more details for a collaboration.\nAlso, for more interesting projects, you can visit my Github account.</string>
    <string name="contact_me">Contact me!</string>
    <string name="share_text">Hi! Need help making sure you never forget your travels? Try our application for free right now.</string>
    <string name="trip_long_click_title">What do you want to do?</string>
    <string name="trip_long_click_edit">Edit Trip</string>
    <string name="trip_long_click_delete">Delete Trip</string>
    <string name="trip_long_click_cancel">Cancel</string>
    <string name="delete_this_trip">Delete this trip</string>
    <string name="trip_delete_description">The trip will be permanently deleted.</string>
    <string name="trip_delete_title">Are you sure you want to delete this trip?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_delete">Yes</string>
    <string name="app_logo">App Logo</string>
    <string name="add_trip_button">Add Trip Button</string>
    <string name="email_icon">Email Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="linkedin_logo">LinkedIn Logo</string>
    <string name="github_logo">Github Logo</string>
    <string name="travel_background">Travel Background</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="contact_email">mailto:alex.smarandache@gmail.com</string>
    <string name="contact_instagram">https://www.instagram.com/alex.smarandache/</string>
    <string name="contact_linkedin">https://www.linkedin.com/in/alexandru-smarandache-15012001/</string>
    <string name="contact_github">https://github.com/AlexSmarandache15</string>
    <string name="the_weather_right_now">The weather at this moment!</string>
    <string name="degree_symbol">°</string>
    <string name="wind_unit">m/s</string>
    <string name="cloud_unit">%</string>
    <string name="humidity_unit">%</string>
    <string name="loading_weather">Loading weather…</string>
    <string name="weather_not_available">The weather is not available for this location:( Please try again later!</string>
    <string name="no_internet_permission">We cannot update the weather without permission to access the Internet:(</string>
    <string name="your_city_temp">Your current city temperature is %d°.</string>
</resources>