<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/medium_padding">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_height"
        android:layout_above="@id/linear_layout_contact"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linear_layout_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/medium_padding"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/contact_me"
            android:textSize="@dimen/welcome_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/hr_size"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@color/gray_700" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/contact_description" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/hr_size"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@color/gray_700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="@dimen/contact_icon_size"
                android:layout_height="@dimen/contact_icon_size"
                android:layout_marginEnd="@dimen/medium_margin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/email_icon"
                android:focusable="true"
                android:onClick="openEmailLink"
                android:scaleType="fitCenter"
                android:src="@drawable/email_icon" />

            <ImageButton
                android:layout_width="@dimen/contact_icon_size"
                android:layout_height="@dimen/contact_icon_size"
                android:layout_marginEnd="@dimen/medium_margin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/twitter_icon"
                android:focusable="true"
                android:onClick="openInstagramLink"
                android:scaleType="fitCenter"
                android:src="@drawable/instagram" />

            <ImageButton
                android:layout_width="@dimen/contact_icon_size"
                android:layout_height="@dimen/contact_icon_size"
                android:layout_marginEnd="@dimen/medium_margin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/linkedin_logo"
                android:focusable="true"
                android:onClick="openLinkedInLink"
                android:scaleType="fitCenter"
                android:src="@drawable/linkedin_logo" />

            <ImageButton
                android:layout_width="@dimen/contact_icon_size"
                android:layout_height="@dimen/contact_icon_size"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/github_logo"
                android:focusable="true"
                android:onClick="openGithubLink"
                android:scaleType="fitCenter"
                android:src="@drawable/github_icon" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>